Update code by adding Kafka flow
