# src/main/java/com/movie/reservation/DTO/BookMovieTicketsRequest.java
@@ -1,0 +1,11 @@
+package com.movie.reservation.DTO;
+
+import lombok.Data;
+
+@Data
+public class BookMovieTicketsRequest {
+    private String id;
+    private String time;
+    private String movieName;
+    private String date;
+}
