# src/main/java/com/movie/reservation/DTO/Error.java
@@ -1,0 +1,9 @@
+package com.movie.reservation.DTO;
+
+import lombok.Data;
+
+@Data
+public class Error {
+    private String errorCode;
+    private String errorMessage;
+}
