# src/main/java/com/movie/reservation/DTO/GetAvailabilityRequest.java
@@ -1,11 +1,0 @@
-package com.movie.reservation.DTO;
-
-import lombok.Data;
-
-import java.time.LocalDateTime;
-
-@Data
-public class GetAvailabilityRequest {
-    private String movieName;
-    private LocalDateTime showTime;
-}
